--- a/package.json
+++ b/package.json
@@ -27,14 +27,20 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@apollo/server": "^5.4.0",
+    "@as-integrations/express5": "^1.1.2",
+    "@nestjs/apollo": "^13.2.4",
     "@nestjs/common": "^11.1.12",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.12",
+    "@nestjs/graphql": "^13.2.4",
     "@nestjs/platform-express": "^11.1.12",
     "@nestjs/typeorm": "^11.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "dataloader": "^2.2.3",
     "dotenv": "^17.2.4",
+    "graphql": "^16.12.0",
     "pg": "^8.18.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
@@ -48,6 +54,7 @@
     "@nestjs/swagger": "^11.2.5",
     "@nestjs/testing": "^11.1.12",
     "@types/express": "^5.0.6",
+    "@types/graphql": "^14.5.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
