feat: prepare to hm aws s3 buket

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,14 @@ DB_USERNAME=postgres
 DB_PASSWORD=postgres
 DB_NAME=nest_shop
 DB_SSL=false
+
+# JWT
+JWT_SECRET=your-super-secret-key-change-in-production
+JWT_EXPIRES_IN=3600s
+
+# AWS S3
+AWS_REGION=eu-central-1
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+S3_BUCKET_NAME=nest-shop-uploads
+CLOUDFRONT_BASE_URL=
