--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Application
 NODE_ENV=development
 PORT=3000
+CORS_ORIGINS=http://localhost:3000,http://localhost:3001
 
 # Database
 DB_HOST=localhost
