infra: add RabbitMQ to docker-compose

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,13 @@ DB_SSL=false
 JWT_SECRET=your-super-secret-key-change-in-production
 JWT_EXPIRES_IN=3600s
 
+# RabbitMQ
+RABBITMQ_URL=amqp://guest:guest@localhost:5672
+RABBITMQ_USER=guest
+RABBITMQ_PASS=guest
+RABBITMQ_PORT=5672
+RABBITMQ_MGMT_PORT=15672
+
 # AWS S3
 AWS_REGION=eu-central-1
 AWS_ACCESS_KEY_ID=
